tests/golden/type_errors/struct_constructor_extra_field.cd
struct Person { name: string }
let p = Person { name: "Ada", age: 36 };
